# secret-business-card-workshop

./: .gitignore  README.md
contract/: Cargo.toml  NOTICE  SECRETCLI.md
contract/artifacts/: IdentityCard-scrt.wasm
contract/examples/: schema.rs
contract/schema/: handle_msg.json  query_msg.json
contract/src/: contract.rs  msg.rs  state.rs
contract/tests/: package-lock.json
node/: index.js  package-lock.json  package.json
react-scrt-business-card/: .gitignore  package-lock.json  package.json
react-scrt-business-card/src/: App.js
react-scrt-business-card/src/components/: CreateCard.js  Navbar.js
react-scrt-business-card/src/pages/: Home.js  MyCards.js
